# robotic_arm

./: .gitignore  compile.sh  pyproject.toml
robotic_arm/: pose.py
ros2_robotic_arm/install/: local_setup.sh  setup.sh
ros2_robotic_arm/install/robot_arm/lib/robot_arm/: robot_controller
ros2_robotic_arm/install/robot_arm/share/robot_arm/: package.sh
ros2_robotic_arm/log/: latest_build
ros2_robotic_arm/src/arm_interfaces/: CMakeLists.txt  package.xml
ros2_robotic_arm/src/arm_interfaces/srv/: FollowTrajectory.srv
ros2_robotic_arm/src/install/: local_setup.sh  setup.sh
ros2_robotic_arm/src/install/robot_arm/lib/robot_arm/: robot_planner
ros2_robotic_arm/src/install/robot_arm/share/robot_arm/: package.sh
ros2_robotic_arm/src/log/: latest_build
ros2_robotic_arm/src/robot_arm/: package.xml  setup.py
ros2_robotic_arm/src/robot_arm/robot_arm/: notebook.ipynb  robot_controller.py  robot_planner.py  utils.py
ros2_robotic_arm/src/robot_arm_interfaces/: CMakeLists.txt  package.xml
ros2_robotic_arm/src/robot_arm_interfaces/srv/: ExecuteTrajectory.srv
