[project]
name = "robotic-arm"
version = "0.1.0"
description = ""
authors = [
    {name = "ayresz",email = "matheusayressantos@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11"